Add get timetable for Staff